# Exchange

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh
lib/: CMakeLists.txt  Common.cpp  Common.hpp
lib/client/: CMakeLists.txt  client_lib.cpp
lib/client/lib/: client_lib.hpp
lib/common/: CMakeLists.txt
lib/common/lib/: common.hpp
lib/server/: CMakeLists.txt  server_lib.cpp
lib/server/lib/: server_lib.hpp
src/: CMakeLists.txt  Client.cpp  Server.cpp
test/: CMakeLists.txt  logic_test.cpp  multy_client_test.cpp
